--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,6 +17,6 @@ import MainLayout from '../layouts/main.astro';
 		<p class="font-serif text-xl">
 			Dr. Kristi Cash White is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
 		</p>
-		<a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="appearance-none py-2 px-4 bg-emerald-500 text-white font-sans rounded-full hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-opacity-75 transition-all duration-200" title="Start your visit in a new window">Schedule a visit with Kristi</a>
+		<a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="button" title="Start your visit in a new window">Schedule a visit with Kristi</a>
 	</div>
 </MainLayout>
