Polish, base stuff
still have issues with specificity. Fonts work. Added AYNFY podcast link.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,9 +14,17 @@ import MainLayout from '../layouts/main.astro';
 			<h1 class="font-serif italic text-2xl">Dr. Kristi Cash White, PhD, LPC</h1>
 			<h2 class="font-bold text-base tracking-widest uppercase">Licensed Counselor</h2>
 		</div>
-		<p class="font-serif text-xl">
-			Dr. Kristi Cash White is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
+		<div>
+		<p class="mb-4">
+			<span class="font-bold font-sans">Dr. Kristi Cash White</span> is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
 		</p>
-		<a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="button" title="Start your visit in a new window">Schedule a visit with Kristi</a>
+		<p>
+			<a href="https://finishednotes.com/" title="Podcast website">
+				<img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-32 lg:h-32 m-2 lg:m-4 float-right" src="/public/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
+			</a>
+			Dr. White is the creator of a podcast by and for counselors, <em>"<a href="https://finishednotes.com/" title="Podcast website">Are Your Notes Finished Yet?</a>" Conversations for today's mental health professionals</em>.
+		</p>
+		</div>
+		<a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="button transform hover:scale-105 transition-all" title="Start your visit in a new window">Schedule a visit with Kristi</a>
 	</div>
 </MainLayout>
