--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import MainLayout from '../layouts/main.astro';
 <MainLayout>
 	<div class="p-6 lg:p-6 grid gap-8 place-items-center h-screen content-center w-full md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto">
 		<div class="text-center">
-			<img class="w-48 h-48 mb-6 drop-shadow-xl rounded-full mx-auto" src="https://finishednotes.com/images/kristi%20portrait,%20square-512.webp" loading="lazy" alt="portrait image" width="256" height="256" />
+			<img class="w-48 h-48 mb-6 drop-shadow-xl rounded-full mx-auto" src="/images/kristi-portrait-square-2022.webp" loading="lazy" alt="portrait image" width="256" height="256" />
 			<h1 class="font-serif italic text-2xl">Dr. Kristi Cash White, PhD, LPC</h1>
 			<h2 class="font-bold text-base tracking-widest uppercase">Licensed Counselor</h2>
 		</div>
@@ -20,7 +20,7 @@ import MainLayout from '../layouts/main.astro';
 		</p>
 		<p>
 			<a href="https://finishednotes.com/" title="Podcast website">
-				<img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-32 lg:h-32 m-2 lg:m-4 float-right" src="/public/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
+				<img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-32 lg:h-32 m-2 lg:m-4 float-right" src="/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
 			</a>
 			Dr. White is the creator of a podcast by and for counselors, <em>"<a href="https://finishednotes.com/" title="Podcast website">Are Your Notes Finished Yet?</a>" Conversations for today's mental health professionals</em>.
 		</p>
