adding author meta
skipping dateTime for now

--- a/src/layouts/main.astro
+++ b/src/layouts/main.astro
@@ -8,14 +8,18 @@ import { SEO } from "astro-seo";
 <html lang="en">
     <head>
         <SEO
-            title="Dr. Kristi Cash White, LPC"
+            title="Dr. Kristi Cash White, PhD, LPC"
             description="Dr. Kristi Cash White is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision"
             openGraph = {{
                 basic: {
-                    title: "Dr. Kristi Cash White, LPC",
+                    title: "Dr. Kristi Cash White, PhD, LPC",
                     type: "profile",
                     image: "/images/opengraph-default.jpg",
-                }
+                },
+                article: {
+                    author: "Dr. Kristi Cash White",
+                    // publishedTime: 
+                },
             }}
         />
 
