--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -33,7 +33,7 @@
 @layer utilities {
     .button {
         text-decoration: none !important;
-        @apply appearance-none no-underline py-2 px-4 text-white font-sans font-bold text-base rounded-full bg-emerald-500 hover:text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-opacity-75 transition-all duration-200;
+        @apply appearance-none no-underline py-2 px-4 text-white font-sans font-bold text-lg lg:text-base rounded-full bg-emerald-500 hover:text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-opacity-75 transition-all duration-200;
     }
 }
 /* transition-all duration-100 underline hover:text-emerald-500 hover:decoration-2 */
