--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,26 +6,50 @@
 // https://docs.astro.build/core-concepts/astro-components/
 import MainLayout from '../layouts/main.astro';
 // const title = "Dr. Kristi Cash White, LPC"
+
+import { Icon } from 'astro-icon';
 ---
 <MainLayout>
-	<section class="relative p-6 lg:p-6 grid gap-8 place-items-center lg:h-screen lg:content-center w-full md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto">
-		<div class="text-center">
-			<img class="w-48 h-48 mb-6 drop-shadow-xl rounded-full mx-auto" src="/images/kristi-portrait-square-2022.webp" loading="lazy" alt="portrait image" width="256" height="256" />
-			<h1 class="font-serif italic text-2xl">Dr. Kristi Cash White, PhD, LPC</h1>
-			<h2 class="font-bold text-base tracking-widest uppercase">Licensed Counselor</h2>
-		</div>
-		<div>
-		<p class="mb-4">
-			<span class="font-bold font-sans">Dr. Kristi Cash White</span> is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
-		</p>
-		<p>
-			<a href="https://finishednotes.com/" title="Podcast website">
-				<img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-32 lg:h-32 m-2 lg:m-4 float-right" src="/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
-			</a>
-			Dr. White is the creator of a podcast by and for counselors, <em>"<a href="https://finishednotes.com/" title="Podcast website">Are Your Notes Finished Yet?</a>" Conversations for today's mental health professionals</em>.
-		</p>
-		</div>
-		<a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="button transform hover:scale-105 transition-all" title="Start your visit in a new window">Schedule a visit with Kristi</a>
-	</section>
-	<!-- <section class="social grid "></section> -->
+    <section class="relative p-6 lg:p-6 grid gap-8 place-items-center lg:h-screen lg:content-center w-full md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto">
+        <div class="text-center">
+            <img class="w-48 h-48 mb-6 drop-shadow-xl rounded-full mx-auto" src="/images/kristi-portrait-square-2022.webp" loading="lazy" alt="portrait image" width="256" height="256" />
+            <h1 class="font-serif italic text-2xl">Dr. Kristi Cash White, PhD, LPC</h1>
+            <h2 class="font-bold text-base tracking-widest uppercase">Licensed Counselor</h2>
+        </div>
+        <div class="content">
+        <p class="mb-4">
+            <span class="font-bold font-sans">Dr. Kristi Cash White</span> is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
+        </p>
+        <p>
+            <a href="https://finishednotes.com/" title="Podcast website">
+                <img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-28 lg:h-28 ml-2 lg:ml-4 float-right" src="/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
+            </a>
+            Dr. White is the creator of a podcast by and for counselors, <em>"<a href="https://finishednotes.com/" title="Podcast website">Are Your Notes Finished Yet?</a>" Conversations for today's mental health professionals</em>.
+        </p>
+        </div>
+        <div class="w-full">
+            <ul role="list" class="link-list items-center grid grid-cols-1 gap-3 text-base font-bold leading-4">
+                <li class="flex gap-x-3">
+                    <Icon name="icon-mail" class="w-4 h-4 fill-current" />
+                    <a href="mailto:counseling@kristicashwhite.net" title="send Kristi an email">Email Kristi</a>
+                </li>
+                <li class="flex gap-x-3">
+                    <Icon name="icon-linkedin" class="w-4 h-4 fill-current" />
+                    <a href="https://linkedin.com/in/kristicashwhite" title="send Kristi an email">Follow on LinkedIn</a>
+                </li>
+                <li class="flex gap-x-3 mb-4">
+                    <Icon name="icon-phone" class="w-4 h-4 fill-current" />
+                    <a href="tel:503-512-0553" title="Call Kristi">Call Kristi</a>
+                </li>
+                <li class="flex gap-x-3">
+                    <a href="https://kristicashwhitecounseling.clientsecure.me" target="_blank" class="button inline-flex items-center gap-x-1.5 transform hover:scale-105 transition-all" title="Start your visit in a new window">
+                        <Icon name="icon-date" class="h-5 w-4 fill-current" />
+                        Schedule a visit with Kristi
+                    </a>
+                </li>
+            </ul>
+        </div>
+        
+    </section>
+    <!-- <section class="social grid "></section> -->
 </MainLayout>
