--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,12 +11,6 @@
     a {
         transition: all var(--ui-speed) ease-out;
         @apply decoration-emerald-600 text-emerald-800 hover:text-emerald-500;
-        text-decoration: underline !important;
-        text-decoration-skip-ink: auto;
-        text-decoration-style: solid;
-        text-decoration-thickness: .125em;
-        text-underline-offset: 1.5px;
-        text-decoration-color: inherit;
         /* text-decoration-color: var(--link-color); */
     }
     p {
@@ -26,17 +20,22 @@
 }
 /* @layer components {
 } */
-/* a {
-    @apply font-bold decoration-2 underline;
-} */
 
 @layer utilities {
     .button {
-        text-decoration: none !important;
+        /* text-decoration: none !important; */
         @apply appearance-none no-underline py-2 px-4 text-white font-sans font-bold text-lg lg:text-base rounded-full bg-emerald-500 hover:text-white hover:bg-emerald-700 focus:outline-none focus:ring-2 focus:ring-emerald-400 focus:ring-opacity-75 transition-all duration-200;
     }
 }
 /* transition-all duration-100 underline hover:text-emerald-500 hover:decoration-2 */
 p {
     margin-bottom: 3rem;
+}
+.content a {
+    text-decoration: underline;
+    text-decoration-skip-ink: auto;
+    text-decoration-style: solid;
+    text-decoration-thickness: .08em;
+    text-underline-offset: 2px;
+    text-decoration-color: inherit;
 }
