home content updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -17,9 +17,18 @@ import { Icon } from 'astro-icon';
             <h2 class="font-bold text-base tracking-widest uppercase">Licensed Counselor</h2>
         </div>
         <div class="content">
+        <p>Mental health counselor virtually for the state of Oregon, in-person in East Portland. </p>
+        <p>In my practice, it seems a lot of the focus these days is on transition. From teenagers figuring out who they are and young adults struggling to make a way to those in mid-life facing an empty nest and retirees asking themselves, "What now?" I work with people as they navigate life stages and reimagine their personal identities.  I believe in the healing power of connection, vulnerability, and relationship. I primarily utilize Adlerian, Acceptance & Commitment, Narrative, and Mindfulness theories and techniques as means to connect with and aid my clients.</p>
+
+        <p><em>Session cost: $180</em></p>
+        <p>Although I do not take insurance, I work with clients to put together the necessary paperwork for pursuing insurance reimbursement as an out-of-network therapist. Please check with your insurance carrier for applicable reimbursement rates.</p>
+        <p>I am an Oregon-licensed counselor, supervisor, and professor with a Ph.D. in Counseling Education & Supervision from the University of the Cumberlands. I have 25 years of experience in the field with specialties in play therapy, public speaking, supervising counselors-in-training, and teaching.</p>
+
+        <!--
         <p>
             <span class="font-bold font-sans">Dr. Kristi Cash White</span> is an Oregon-licensed counselor and education professional with a Ph.D. in Counseling Education & Supervision from <a href="https://www.ucumberlands.edu/" title="University of the Cumberlands website">University of the Cumberlands</a>. She is an experienced counselor with specialities in play therapy, public speaking, supervising counselors-in-training, and teaching.
         </p>
+        -->
         <p>
             <a href="https://finishednotes.com/" title="Podcast website">
                 <img class="transform hover:scale-110 transition-all rotate-6 rounded-sm w-24 h-24 lg:w-28 lg:h-28 ml-2 lg:ml-4 float-right" src="/images/aynfy-show-cover-1x.webp" alt="AYNFY Podcast" loading="lazy" />
