--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import MainLayout from '../layouts/main.astro';
 import { Icon } from 'astro-icon';
 ---
 <MainLayout>
-    <section class="relative p-6 lg:p-6 grid gap-8 place-items-center lg:h-screen lg:content-center w-full md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto">
+    <section class="relative p-6 lg:p-6 grid gap-8 place-items-center lg:content-center w-full md:w-2/3 lg:w-1/2 xl:w-1/3 mx-auto">
         <div class="text-center">
             <img class="w-48 h-48 mb-6 drop-shadow-xl rounded-full mx-auto" src="/images/kristi-portrait-square-2022.webp" loading="lazy" alt="portrait image" width="256" height="256" />
             <h1 class="font-serif italic text-2xl">Dr. Kristi Cash White, PhD, LPC</h1>
